# pynorminette

./: .gitignore  LICENSE  README.md  build  check.py  pynorminette  pyproject.toml  requirements.txt  setup.cfg  tox.ini
pynorminette/: __init__.py  checker.py  tester.py
pynorminette_package/: __init__.py  status.py  tester.py
src/pynorminette/: __init__.py  __main__.py  checker.py  status.py  tester.py  utils.py
