[build-system]
  requires = ["flit_core >=3.2,<4"]
  build-backend = "flit_core.buildapi"

[project]
  name = "pynorminette_package"
  authors = [{ name = "Younghyun Kim", email = "42.4.youkim@gmail.com" }]
  readme = "README.md"
  classifiers = ["License :: OSI Approved :: MIT License"]
  dynamic = ["version", "description"]

  [project.urls]
    Home = "https://github.com/youkim005/pynorminette"
