[metadata]
    name = pynorminette-pkg-youkim005
    version = 0.0.1
    author = Younghyun Kim
    author_email = 42.4.youkim@gmail.com
    description = A python Norminette tool.
    long_description = file: README.md
    long_description_content_type = text/markdown
    url = https://github.com/youkim005/pynorminette
    project_urls =
        Bug Tracker = https://github.com/youkim005/pynorminette/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
    package_dir =
        = src
    packages = find:
    python_requires = >=3.8.2

[options.packages.find]
    where = src

