[metadata]
    name = pynorminette
    author = youkim
    author_email = 42.4.youkim@gmail.com
    version = 0.0.7
    description = A python Norminette tool.
    long_description = file: README.md
    long_description_content_type = text/markdown
    url = https://github.com/youkim005/pynorminette
    project_urls =
        Bug Tracker = https://github.com/youkim005/pynorminette/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
    packages = find:
    package_dir =
        = src
    python_requires = >=3.8.2
    install_requires =
        termcolor
        flake8
        black
        mypy

[options.packages.find]
    where = src

[options.entry_points]
    console_scripts =
        pynorminette = pynorminette:main
