[metadata]
    name = pynorminette
    author = youkim
    author_email = 42.4.youkim@gmail.com
    version = 0.0.7
    description = A python Norminette tool.
    long_description = file: README.md
    long_description_content_type = text/markdown
    url = https://github.com/youkim005/pynorminette
    project_urls =
        Bug Tracker = https://github.com/youkim005/pynorminette/issues
    classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
    packages = find:
    package_dir =
        = src
    python_requires = >=3.8.2
    install_requires =
        black>=21.10b0
        click>=8.0.3
        flake8>=4.0.1
        flake8-colors>=0.1.9
        flake8-polyfill>=1.0.2
        mccabe>=0.6.1
        mypy>=0.910
        mypy-extensions>=0.4.3
        pathspec>=0.9.0
        pep8-naming>=0.12.1
        platformdirs>=2.4.0
        pycodestyle>=2.8.0
        pyflakes>=2.4.0
        regex>=2021.10.23
        termcolor>=1.1.0
        toml>=0.10.2
        tomli>=1.2.2
        types-termcolor>=1.1.2
        typing-extensions>=3.10.0.2

[options.packages.find]
    where = src

[options.entry_points]
    console_scripts =
        pynorminette = pynorminette:main
